--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/nav.css">
 	<link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="aos/aos.css" />
 
 	<title>BPA Cares</title>
 </head>
 <body>
 
 	<div class="top-head">
-		<img src="img/logo.png" alt="BPA Cares Awards">
+		<img src="img/logo.png" alt="BPA Cares Awards" data-aos="fade-up" data-aos-delay="500">
 	</div>
 
 	<header class="cd-morph-dropdown">
@@ -123,17 +124,17 @@
 			<h2>Award Categories</h2>
 			<div class="category-grid">
 
-				<a href="#sla"><div class="category" style="background-image: url('img/sla.jpg')"><div class="layer"></div>
+				<a href="#sla" data-aos="fade-up" data-aos-delay="150"><div class="category" style="background-image: url('img/sla.jpg')"><div class="layer"></div>
 					<h3>Service Learning Awards</h3>
 					<p>The purpose of the Service Learning Awards Program is to encourage individuals and chapters to be involved in their community through service learning.</p>
 				</div></a>
 
-				<a href="#sra"><div class="category" style="background-image: url('img/sra.jpg')"><div class="layer"></div>
+				<a href="#sra" data-aos="fade-up" data-aos-delay="300"><div class="category" style="background-image: url('img/sra.jpg')"><div class="layer"></div>
 					<h3>Special Recognition Awards</h3>
 					<p>The purpose of the Special Recognition Awards Program is to encourage individuals and chapters to support and promote their organizations.</p>
 				</div></a>
 
-				<a href="#pa"><div class="category" style="background-image: url('img/pa.jpg')"><div class="layer"></div>
+				<a href="#pa" data-aos="fade-up" data-aos-delay="450"><div class="category" style="background-image: url('img/pa.jpg')"><div class="layer"></div>
 					<h3>Professional Awards</h3>
 					<p>The purpose of the Professional Awards Program is to acknowledge the dedication and service of our supporters.</p>
 				</div></a>
@@ -153,27 +154,27 @@
 			</div>
 
 				<a href="awards/communityservice.html" class="award-link" id="Community Service Award"><div class="award">
-					<hr><h4>Community Service Award</h4>
+					<hr class="hr-1"><h4>Community Service Award</h4>
 					<p>To encourage local chapters to become actively involved in community betterment, school improvement, and election-year activities</p>
 				</div></a>
 
 				<a href="awards/awareness.html" class="award-link" id="Environmental Action/Awareness Award"><div class="award">
-					<hr><h4>Environmental Action/Awareness Award</h4>
+					<hr class="hr-1"><h4>Environmental Action/Awareness Award</h4>
 					<p>To promote the image of Business Professionals of America (BPA) as an organization that is aware of current environmental issues</p>
 				</div></a>
 
 				<a href="awards/safety.html" class="award-link" id="Safety Awareness Award"><div class="award">
-					<hr><h4>Safety Awareness Award</h4>
+					<hr class="hr-1"><h4>Safety Awareness Award</h4>
 					<p>To encourage and recognize local chapters for their involvement and development of safety programs</p>
 				</div></a>
 
 				<a href="awards/servicelearning.html" class="award-link" id="Service Learning Individual Award"><div class="award">
-					<hr><h4>Service Learning Individual Award</h4>
+					<hr class="hr-1"><h4>Service Learning Individual Award</h4>
 					<p>To recognize local members involved with Service Learning</p>
 				</div></a>
 
 				<a href="awards/olympics.html" class="award-link" id="Special Olympics Award"><div class="award">
-					<hr><h4>Special Olympics Award</h4>
+					<hr class="hr-1"><h4>Special Olympics Award</h4>
 					<p>To recognize local members involved with Special Olympics</p>
 				</div></a>
 
@@ -182,37 +183,37 @@
 			</div>
 
 				<a href="awards/publicrelations.html" class="award-link" id="BPA Marketing and Public Relations"><div class="award">
-					<hr><h4>BPA Marketing and Public Relations</h4>
+					<hr class="hr-2"><h4>BPA Marketing and Public Relations</h4>
 					<p>To promote the image of Business Professionals of America and its members</p>
 				</div></a>
 
 				<a href="awards/bpamerit.html" class="award-link" id="BPA Merit Scholar"><div class="award">
-					<hr><h4>BPA Merit Scholar</h4>
+					<hr class="hr-2"><h4>BPA Merit Scholar</h4>
 					<p>To recognize individual members and advisors for their knowledge of BPA and to motivate all members and advisors to learn as much about the organization</p>
 				</div></a>
 
 				<a href="awards/chapteractivities.html" class="award-link" id="Chapter Activities Award of Excellence"><div class="award">
-					<hr><h4>Chapter Activities Award of Excellence</h4>
+					<hr class="hr-2"><h4>Chapter Activities Award of Excellence</h4>
 					<p>To recognize local chapters for their outstanding activities and program of work and to motivate all local chapters to strive for an outstanding program of activities</p>
 				</div></a>
 
 				<a href="awards/recruiter.html" class="award-link" id="Recruiter of the Year Award"><div class="award">
-					<hr><h4>Recruiter of the Year Award</h4>
+					<hr class="hr-2"><h4>Recruiter of the Year Award</h4>
 					<p>To encourage current members of the Secondary, Post-Secondary, and Middle Level Divisions to recruit new BPA members</p>
 				</div></a>
 
 				<a href="awards/explosion.html" class="award-link" id="Membership Explosion Award"><div class="award">
-					<hr><h4>Membership Explosion Award</h4>
+					<hr class="hr-2"><h4>Membership Explosion Award</h4>
 					<p>To recognize outstanding chapters who have successfully recruited members to their chapters, adding to the overall strength and size of our organization</p>
 				</div></a>
 
 				<a href="awards/socialmedia.html" class="award-link" id="Social Media Award"><div class="award">
-					<hr><h4>Social Media Award</h4>
+					<hr class="hr-2"><h4>Social Media Award</h4>
 					<p>To encourage local chapters to become actively involved in the National Officer Team Social Media Challenges</p>
 				</div></a>
 
 				<a href="awards/professionalcup.html" class="award-link" id="The Professional Cup"><div class="award">
-					<hr><h4>The Professional Cup</h4>
+					<hr class="hr-2"><h4>The Professional Cup</h4>
 					<p>To encourage state associations to become actively involved in promoting participation in the BPA Cares Award Program by the local chapters and to recognize states with active participation</p>
 				</div></a>
 
@@ -221,32 +222,32 @@
 			</div>
 
 				<a href="awards/advisor.html" class="award-link" id="Advisor of the Year Award"><div class="award">
-					<hr><h4>Advisor of the Year Award</h4>
+					<hr class="hr-3"><h4>Advisor of the Year Award</h4>
 					<p>To recognize an individual who has made significant contributions to BPA as a local chapter advisor</p>
 				</div></a>
 
 				<a href="awards/emergingadvisor.html" class="award-link" id="Emerging Advisor of the Year Award"><div class="award">
-					<hr><h4>Emerging Advisor of the Year Award</h4>
+					<hr class="hr-3"><h4>Emerging Advisor of the Year Award</h4>
 					<p>To recognize an individual who has made significant contributions to BPA as a local chapter advisor with five years or less of service</p>
 				</div></a>
 
 				<a href="awards/emergingprofessional.html" class="award-link" id="Emerging Professional of the Year Award"><div class="award">
-					<hr><h4>Emerging Professional of the Year Award</h4>
+					<hr class="hr-3"><h4>Emerging Professional of the Year Award</h4>
 					<p>To recognize registered alumni in good standing who made their mark as professionals and contributed to BPA within their first five years of service to the Association</p>
 				</div></a>
 
 				<a href="awards/halloffame.html" class="award-link" id="Hall of Fame Award"><div class="award">
-					<hr><h4>Hall of Fame Award</h4>
+					<hr class="hr-3"><h4>Hall of Fame Award</h4>
 					<p>To recognize those individuals who have made significant contributions at the national level to BPA, formerly the Office Education Association</p>
 				</div></a>
 
 				<a href="awards/outstandingservice.html" class="award-link" id="Outstanding Service Award"><div class="award">
-					<hr><h4>Outstanding Service Award</h4>
+					<hr class="hr-3"><h4>Outstanding Service Award</h4>
 					<p>To recognize those individuals who have dedicated time and effort to promote the objectives of career student BPA or provided outstanding service to BPA at the national level</p>
 				</div></a>
 
 				<a href="awards/studentofyear.html" class="award-link" id="Student of the Year"><div class="award">
-					<hr><h4>Student of the Year</h4>
+					<hr class="hr-3"><h4>Student of the Year</h4>
 					<p>To recognize those students who have made significant contributions to Business Professionals of America as a student member</p>
 				</div></a>
 
@@ -256,9 +257,9 @@
 
 <footer>
 	<div class="icons">
-		<a href="#" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
-		<a href="#" target="_blank"><img src="img/facebook.svg" alt="Facebook"></a>
-		<a href="#" target="_blank"><img src="img/pinterest.svg" alt="Pinterest"></a>
+		<a href="https://twitter.com/National_BPA" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
+		<a href="https://www.facebook.com/businessprofessionalsofamerica" target="_blank"><img src="img/facebook.svg" alt="Facebook"></a>
+		<a href="https://www.instagram.com/bpanational/?hl=en" target="_blank"><img src="img/instagram.svg" alt="Instagram"></a>
 		<p>#bpacares</p>
 	</div>
 </footer>
@@ -268,6 +269,13 @@
 </script>
 <script src="js/search.js"></script>
 <script src="js/modernizr-custom.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="js/main.js"></script>
+    <script src="aos/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true
+      });
+      window.addEventListener('load', AOS.refresh);
+    </script>
 </body>
 </html>
