--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
 			<h2>Award Categories</h2>
 			<div class="category-grid">
 
-				<a href="#sla" data-aos="fade-up" data-aos-delay="150"><div class="category" style="background-image: url('img/sla.jpg')"><div class="layer"></div>
+				<a href="#sla"><div class="category" style="background-image: url('img/sla.jpg')" data-aos="fade-up" data-aos-delay="150"><div class="layer"></div>
 					<h3>Service Learning Awards</h3>
 					<p>The purpose of the Service Learning Awards Program is to encourage individuals and chapters to be involved in their community through service learning.</p>
 				</div></a>
 
-				<a href="#sra" data-aos="fade-up" data-aos-delay="300"><div class="category" style="background-image: url('img/sra.jpg')"><div class="layer"></div>
+				<a href="#sra"><div class="category" style="background-image: url('img/sra.jpg')" data-aos="fade-up" data-aos-delay="300"><div class="layer"></div>
 					<h3>Special Recognition Awards</h3>
 					<p>The purpose of the Special Recognition Awards Program is to encourage individuals and chapters to support and promote their organizations.</p>
 				</div></a>
 
-				<a href="#pa" data-aos="fade-up" data-aos-delay="450"><div class="category" style="background-image: url('img/pa.jpg')"><div class="layer"></div>
+				<a href="#pa"><div class="category" style="background-image: url('img/pa.jpg')" data-aos="fade-up" data-aos-delay="450"><div class="layer"></div>
 					<h3>Professional Awards</h3>
 					<p>The purpose of the Professional Awards Program is to acknowledge the dedication and service of our supporters.</p>
 				</div></a>
