--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
 			<h2>Award Categories</h2>
 			<div class="category-grid">
 
-				<a href="#sla"><div class="category" style="background-image: url('img/sla.jpg')" data-aos="fade-up" data-aos-delay="150"><div class="layer"></div>
+				<a href="#sla" class="smooth-scroll"><div class="category" style="background-image: url('img/sla.jpg')" data-aos="fade-up" data-aos-delay="150"><div class="layer"></div>
 					<h3>Service Learning Awards</h3>
 					<p>The purpose of the Service Learning Awards Program is to encourage individuals and chapters to be involved in their community through service learning.</p>
 				</div></a>
 
-				<a href="#sra"><div class="category" style="background-image: url('img/sra.jpg')" data-aos="fade-up" data-aos-delay="300"><div class="layer"></div>
+				<a href="#sra" class="smooth-scroll"><div class="category" style="background-image: url('img/sra.jpg')" data-aos="fade-up" data-aos-delay="300"><div class="layer"></div>
 					<h3>Special Recognition Awards</h3>
 					<p>The purpose of the Special Recognition Awards Program is to encourage individuals and chapters to support and promote their organizations.</p>
 				</div></a>
 
-				<a href="#pa"><div class="category" style="background-image: url('img/pa.jpg')" data-aos="fade-up" data-aos-delay="450"><div class="layer"></div>
+				<a href="#pa" class="smooth-scroll"><div class="category" style="background-image: url('img/pa.jpg')" data-aos="fade-up" data-aos-delay="450"><div class="layer"></div>
 					<h3>Professional Awards</h3>
 					<p>The purpose of the Professional Awards Program is to acknowledge the dedication and service of our supporters.</p>
 				</div></a>
@@ -268,6 +268,7 @@
 	if( !window.jQuery ) document.write('<script src="js/jquery-3.0.0.min.js"><\/script>');
 </script>
 <script src="js/search.js"></script>
+<script src="js/smoothscroll.js"></script>
 <script src="js/modernizr-custom.js"></script>
 <script src="js/main.js"></script>
     <script src="aos/aos.js"></script>
